force-app/main/default/objects/DTS_Integration_Log__c/DTS_Integration_Log__c.object-meta.xml
<CustomObject>
    <description>NICC-054300 - Stores messages and logs generated by integrations between this org and other Amadeus systems.</description>
    <label>DTS Integration Log</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTS Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>