force-app/main/default/objects/DTS_Integration_Log__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>NICC-054300</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Server-side timestamp for the log</inlineHelpText>
    <label>Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>