force-app/main/default/objects/DTS_Integration_Log__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>NICC-054300</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contents of the log</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>