force-app/main/default/objects/DTS_Integration_Log__c/fields/Host_Name_IP__c.field-meta.xml
<CustomField>
    <fullName>Host_Name_IP__c</fullName>
    <description>NICC-054300</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Environment that generated the log</inlineHelpText>
    <label>Host Name/IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>