force-app/main/default/objects/DTS_Integration_Log__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <description>NICC-054300</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Integration that generated this log</inlineHelpText>
    <label>Integration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>