force-app/main/default/objects/DTS_Integration_Log__c/fields/Issue_Severity__c.field-meta.xml
<CustomField>
    <fullName>Issue_Severity__c</fullName>
    <description>NICC-054300</description>
    <inlineHelpText>Severity of the issues(s) reported in the log</inlineHelpText>
    <label>Issue Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2 - Urgent</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>