force-app/main/default/objects/DTS_Integration_Log__c/fields/Job_Process_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Process_ID__c</fullName>
    <description>NICC-054300</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID of the job or integration sub-process that generated the log</inlineHelpText>
    <label>Job/Process ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>