force-app/main/default/objects/DTS_Integration_Log__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <description>NICC-054300</description>
    <inlineHelpText>Current stage in the path to resolving the issue.</inlineHelpText>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Problem Identified</fullName>
            </value>
            <value>
                <fullName>Solution Identified</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Pending Deployment</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>