force-app/main/default/objects/DTS_Integration_Log__c/listViews/CustomerCentral_Case_Sharing.listView-meta.xml
<ListView>
    <fullName>CustomerCentral_Case_Sharing</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Name__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>equals</operation>
        <value>CustomerCentral Case Sharing SQL Job</value>
    </filters>
    <label>CustomerCentral Case Sharing</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>