force-app/main/default/objects/DTS_Integration_Log__c/listViews/Medallia_Integration_Logs.listView-meta.xml
<ListView>
    <fullName>Medallia_Integration_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Name__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Job_Process_Name__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>contains</operation>
        <value>Medallia</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <label>Medallia Integration Logs</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>