force-app/main/default/objects/DTS_Integration_Log__c/listViews/SAP_Integration_Records.listView-meta.xml
<ListView>
    <fullName>SAP_Integration_Records</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Date_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Host_Name_IP__c</columns>
    <columns>Job_Process_Name__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>startsWith</operation>
        <value>GFT</value>
    </filters>
    <filters>
        <field>Integration_Name__c</field>
        <operation>startsWith</operation>
        <value>SAP</value>
    </filters>
    <label>SAP Integration Records</label>
    <language>en_US</language>
</ListView>