force-app/main/default/objects/DTS_Integration_Log__c/listViews/Support_Survey_Jobs.listView-meta.xml
<ListView>
    <fullName>Support_Survey_Jobs</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Date_Time__c</columns>
    <columns>Details__c</columns>
    <columns>Integration_Name__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Job_Process_ID__c</columns>
    <columns>Job_Process_Name__c</columns>
    <columns>Job_Process_Type__c</columns>
    <columns>Summary__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>equals</operation>
        <value>Support Survey Job</value>
    </filters>
    <filters>
        <field>Integration_Name__c</field>
        <operation>equals</operation>
        <value>ConfirmIT Support Survey</value>
    </filters>
    <label>Confirmit Support Survey Jobs</label>
</ListView>